force-app/main/default/objects/Client_Payment__c/Client_Payment__c.object-meta.xml
<CustomObject>
    <label>Client Payment</label>
    <nameField>
        <displayFormat>CPY-{0000}</displayFormat>
        <label>Client Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>