force-app/main/default/objects/Client_Payment__c/fields/Accepted_By__c.field-meta.xml
<CustomField>
    <fullName>Accepted_By__c</fullName>
    <label>Accepted By</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Team_Members</valueSetName>
    </valueSet>
</CustomField>