force-app/main/default/objects/Client_Payment__c/fields/CD_Amount__c.field-meta.xml
<CustomField>
    <fullName>CD_Amount__c</fullName>
    <label>CD Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>