force-app/main/default/objects/Client_Payment__c/fields/CD_Percentage__c.field-meta.xml
<CustomField>
    <fullName>CD_Percentage__c</fullName>
    <label>CD Percentage</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>