force-app/main/default/objects/Client_Payment__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>When client paid. Required ✓. Default = Today.</description>
    <label>Payment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>