force-app/main/default/objects/Client_Payment__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>UPI transaction ID, cheque number, etc.</description>
    <inlineHelpText>UPI transaction ID, cheque number, etc.</inlineHelpText>
    <label>Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>